submit attendance
